# rag-indexing

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.md
examples/: class_example.py
scratch/input/: 房地产行业周度观察diy.docx  房地产行业周度观察diy.pptx
src/googleDemo/: activity_test.py  drive_test.py
src/rag_indexing/: AnnotationPictureSerializer.py  AnnotationTableSerializer.py  ImageAwareMarkdownHeaderTextSplitter.py  ImageAwareMarkdownTextSplitter.py  ImageAwareTextSplitterMixin.py  LLMPictureSerializer.py  LLMTableSerializer.py  LLMTableSerializer_example.py  chunker.py  config.py  docling_loader.py  docling_test.py  llm_utils.py  main.py  temp.py
tests/: test_main.py
